# blarp

./: README.md  main.py  pyproject.toml
core/: blarp.py  processor.py
